# IPA-Navigator

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml
.zed/: settings.json
aligner/: Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
aligner/app/: main.py  phonemes.py  wav2vec.py  whisper.py
src-server/: Cargo.toml  Dockerfile  Dockerfile.dev
src-server/assets/Kokoro/: note.txt
src-server/assets/MFA_Dictionaries/: english_uk_mfa.dict  english_us_mfa.dict
src-server/ipa-navigator-axum/: Cargo.toml
src-server/ipa-navigator-axum/src/: config.rs  error.rs  lib.rs  routes.rs
src-server/ipa-navigator-axum/src/handlers/: health.rs  mfa.rs  mod.rs  tts.rs
src-server/ipa-navigator-convex/: Cargo.toml
src-server/ipa-navigator-convex/src/: config.rs  lib.rs  routes.rs
src-server/ipa-navigator-kokoro/: Cargo.toml  draft.txt
src-server/ipa-navigator-kokoro/src/: constants.rs  error.rs  lib.rs  model.rs  normalize.rs  phonemizer.rs  tokenize.rs  tts.rs  vocab.rs  voices.rs
src-server/ipa-navigator-mfa/: Cargo.toml  Dockerfile  Dockerfile.dev
src-server/ipa-navigator-mfa/data/output/test_mfa/: alignment_analysis.csv  input.TextGrid
src-server/ipa-navigator-mfa/src/: api.rs  constants.rs  corpus.rs  docker.rs  input.rs  lib.rs  mfa_parser.rs  phoneme.rs  scoring.rs
src-server/ipa-navigator-mfa/tests/: test_log.txt
src-server/src/: main.rs
src-server/tests/api/: yaak.rq_2H4agYfCga.yaml  yaak.rq_azubcqsQoe.yaml  yaak.rq_m839WPmoa5.yaml  yaak.rq_qMXEykAG7L.yaml  yaak.rq_v9ZaTpySGg.yaml  yaak.rq_vuFBvbW3eF.yaml  yaak.wk_xaXUPwwVmi.yaml
src-web/: .dockerignore  .env.production  Dockerfile  Dockerfile.dev  deno.json  index.html  package.json
src-web/convex/: crons.ts  schema.ts  tsconfig.json
src-web/convex/_generated/: api.d.ts
src-web/convex/functions/: badgeSvgGenerator.ts  chapters.ts  classrooms.ts  dashboard.ts  excerpts.ts  files.ts  gamification.ts  ml.ts  performance.ts  phonemes.ts  social.ts  users.ts
src-web/convex/models/: api.ts  badges.ts  chapters.ts  performance.ts  users.ts
src-web/src/: App.css  App.tsx  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
src-web/src/components/: AddChapterModal.tsx  AddChaptersModal.tsx  BadgesDisplay.tsx  ChaptersInProgressTab.tsx  ClassroomSettings.tsx  CreateClassroomModal.tsx  FocusSessionPractice.tsx  JoinClassroomModal.tsx  JoinWithCodeModal.tsx  LeaveClassroomModal.tsx  Modal.tsx
src-web/src/components/ChapterCategories/: CategoryBadge.tsx  CategorySelector.tsx  CategoryTree.tsx  types.tsx
src-web/src/components/ChapterComponents/: EditorContent.tsx  SettingsContent.tsx  WordPracticeModal.tsx
src-web/src/components/FormComponents/: Form.tsx  FormInputField.tsx  FormModuleNoInput.tsx  FormTextAreaField.tsx  FormUploadField.tsx
src-web/src/hooks/: useChapterOptions.tsx  useFileUpload.tsx  usePhonemeFeedbacks.tsx  usePronunciationAnalysis.tsx  useStoreUserEffect.tsx  useTTS.tsx
src-web/src/routes/: __root.tsx  index.tsx
src-web/src/routes/_auth/: route.tsx  sign-in.tsx  sign-up.tsx
src-web/src/routes/_protected/: chapters.tsx  classrooms.tsx  collection.tsx  dashboard.tsx  demo.tsx  focus-session.tsx  route.tsx  settings.tsx  test.tsx
src-web/src/routes/_protected/chapters/: $chapterId.edit.tsx  $chapterId.practice.tsx  index.tsx
src-web/src/routes/_protected/classrooms/: index.tsx
src-web/src/routes/_protected/classrooms/$classroomId/: index.tsx  route.tsx  settings.tsx
whisperx-aligner/: README.md  requirements.txt
whisperx-aligner/app/: main.py  model_server.py  wav2vec.py
