[package]
name = "ipa-navigator-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.6.4", features = [
    "cors",
    "compression-gzip",
    "trace",
    "timeout",
] }

# TTS
ipa-navigator-kokoro = { path = "../ipa-navigator-kokoro" }

# MFA
ipa-navigator-mfa = { path = "../ipa-navigator-mfa" }

# Async runtime
tokio = { version = "1.45.0", features = ["full"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
base64 = "0.22.1"
