[package]
name = "ipa-navigator-kokoro"
version = "0.1.0"
edition = "2024"

# Most of this crate references the Kokoros project:
# https://github.com/lucasjinreal/Kokoros

[dependencies]
# ONNX Runtime for model inference
ort = { version = "2.0.0-rc.10", features = ["coreml"] }

# Text Processing
espeak-rs = "0.1.9"   # Text to phonemes
thiserror = "2.0.12"
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
